tests/ui/consts/static_mut_containing_mut_ref2.stock.stderr
error[E0658]: mutable references are not allowed in statics
  --> $DIR/static_mut_containing_mut_ref2.rs:7:46
   |
LL | pub static mut STDERR_BUFFER: () = unsafe { *(&mut STDERR_BUFFER_SPACE) = 42; };
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/crablang/crablang/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
